# log8415-tp1

./: .gitignore  README.md  app.py  pyproject.toml  script.sh
app/: Dockerfile  __init__.py  app.py
bench/: __main__.py  analysis.py  config.py  constants.py  scenarios.py  utils.py
benchmark/: bench.py  cloudWatch.py  loadbalancer_analysis.ipynb
cloudwatch/load_balancer/: request_count_metric.json
cloudwatch/targets/target_grp_1/: healthy_host_count_metric.json  request_count_per_target_metric.json  target_connection_error_count_metric.json  target_response_time_metric.json  unhealthy_host_count_metric.json
cloudwatch/targets/target_grp_2/: healthy_host_count_metric.json  request_count_per_target_metric.json  target_connection_error_count_metric.json  target_response_time_metric.json  unhealthy_host_count_metric.json
deploy/: __main__.py  bootstrap.py  cleanup.py  config.py  infra.py  utils.py
metrics/cloudwatch/load_balancer/: active_connection_count_metric.json  consumed_lcus_metric.json  http_code_target_2xx_metric.json  http_redirect_count_metric.json  processed_bytes_metric.json  request_count_metric.json  rule_evaluations_metric.json
